fixed spacing, added keyframe animation to css and buttons

--- a/client/src/questions.css
+++ b/client/src/questions.css
@@ -77,6 +77,20 @@ form{
   90% { transform: scale(1.5); }
 	100% { transform: scale(1); }
 }
+@keyframes pulse_animation2 {
+	0% { transform: scale(1); }
+  10% { transform: scale(1.2); }
+  20% { transform: scale(1); }
+	30% { transform: scale(1.2); }
+	40% { transform: scale(1); }
+	50% { transform: scale(1.2); }
+	60% { transform: scale(1); }
+	70% { transform: scale(1.2); }
+	80% { transform: scale(1); }
+  90% { transform: scale(1.2); }
+	100% { transform: scale(1); }
+}
+
 .pulse {
 	animation-name: pulse_animation;
 	animation-duration: 4000ms;
@@ -84,6 +98,17 @@ form{
 	animation-iteration-count: infinite;
 	animation-timing-function: linear;
 }
+
+.pulse2
+  {
+  	animation-name: pulse_animation2;
+  	animation-duration: 4000ms;
+  	transform-origin: 70% 70%;
+  	animation-iteration-count: infinite;
+  	animation-timing-function: linear;
+  }
+
+
 
 #user-answer {
   width: 180px;
@@ -130,4 +155,11 @@ form{
 #user-answer:focus {
   border-color: yellow;
   box-shadow: 0px 0px 10px 7px yellow;
+}
+
+.scoreboard {
+  align-self: center;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 26px;
 }
